# libsql-spike

./: .gitignore  README.md
checklist/: Cargo.toml
checklist/src/: lib.rs  schema.sql
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
ffi/: Cargo.toml  README.md
ffi/bindings/python/: cli.py
ffi/src/: checklist.rs  item.rs  lib.rs
ffi/src/generic/: checklist.rs  error.rs
ffi/src/wasm/: checklist.rs  error.rs  item.rs  mod.rs
