[package]
name = "checklist"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = [
    "from",
    "into",
    "deref",
    "constructor",
    "display",
    "from_str",
] }
libsql = { version = "0.6.0", default-features = false, features = [
    "core",
    "encryption",
] }
thiserror = "2.0.11"
